test/errors/unexpected_end_of_file.correct
error: unexpected_end_of_file.li:1:8: unexpected end of file, expected ';'
│ print()
│        ~
│        ^
